Fixed Game Win condition

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,14 +2,14 @@
 GameName=CS415_Assignment_2
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/BlockGame/Maps/NewMap.NewMap
+GameDefaultMap=/Game/CS_415_Content/Assignment2_Map.Assignment2_Map
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
-EditorStartupMap=/Game/BlockGame/Maps/NewMap.NewMap
+EditorStartupMap=/Game/CS_415_Content/Assignment2_Map.Assignment2_Map
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
